<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.LoginFragment">

    <TextView
        android:id="@+id/LoginTitle"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginVertical="25dp"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/Text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"

        />


    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        />


    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"

        />


</LinearLayout>