<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/createAccountTitle"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginVertical="100dp"
        android:gravity="center"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createAccountUsername"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints="username"
        android:background="@drawable/search_input_border"
        android:ems="12"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTitle" />


    <EditText
        android:id="@+id/CreateAccountEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="Email"
        android:ems="12"
        android:background="@drawable/search_input_border"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountUsername"
        android:hint="@string/email" />


    <EditText
        android:id="@+id/CreateAccountPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="Email"
        android:background="@drawable/search_input_border"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccountEmail"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/general_button"
        android:padding="16dp"
        android:text="@string/create_account"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccountPassword"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccountButton"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ProceedToLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/general_button"
        android:padding="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/proceed_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>