<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/book_cover"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/book_cover" />


        <TextView
            android:id="@+id/book_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/book_cover"
            app:layout_constraintTop_toTopOf="@id/book_cover"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>


        <TextView
            android:id="@+id/book_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@id/book_title"
            app:layout_constraintTop_toBottomOf="@id/book_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>


        <RatingBar
            android:id="@+id/book_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1"
            android:progressTint="@color/main"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:layout_constraintTop_toBottomOf="@id/book_author"
            app:layout_constraintStart_toStartOf="@id/book_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/post_review_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/general_button"
            android:text="@string/add_review"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/book_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/book_title"
            app:layout_constraintTop_toBottomOf="@+id/book_rating" />

        <TextView
            android:id="@+id/book_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_description_goes_here"
            android:textSize="14sp"
            android:maxLines="5"
            android:ellipsize="end"
            android:layout_marginTop="16dp"
            android:background="@color/secondary"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/book_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/show_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_more"
            android:textColor="@color/main"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/book_description"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/show_more_button" />

        <TextView
            android:id="@+id/reviews_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews_header"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>