<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".view.ViewProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fixed_top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/profile_picture"
            android:contentDescription="@string/profile_pic_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/detailsSection"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfilePicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
            app:layout_constraintTop_toTopOf="@+id/ivProfilePicture">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/buttonsSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/followersButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Followers"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/white"
                    app:iconGravity="textStart"
                    app:iconPadding="4dp"
                    app:strokeColor="@color/main"
                    app:strokeWidth="1dp"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/followingButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/following"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="8dp"
                    app:iconGravity="textStart"
                    app:iconPadding="4dp"
                    app:strokeColor="@color/main"
                    app:strokeWidth="1dp"
                    app:useMaterialThemeColors="false" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFollow"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/follow"
            android:textAllCaps="false"
            android:visibility="gone" app:backgroundTint="@color/white"
            app:cornerRadius="8dp"
            app:iconGravity="textStart"
            app:iconPadding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfilePicture"
            app:strokeColor="@color/main"
            app:strokeWidth="1dp"
            app:useMaterialThemeColors="false"
            tools:visibility="visible"/> </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollable_reviews_section"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/fixed_top_section"
        android:layout_alignParentBottom="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/ReviewsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/past_reviews"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:nestedScrollingEnabled="false" android:paddingTop="8dp"
                tools:listitem="@layout/item_user_review" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>