<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_marginTop="12dp"
    android:background="@drawable/search_input_border">

    <!-- Book cover on the left -->
    <ImageView
        android:id="@+id/review_book_cover"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/book_cover_for_profile_review"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <!-- RatingBar at the top-right -->
    <RatingBar
        android:id="@+id/review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:progressTint="@color/main"
        android:isIndicator="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/review_book_cover"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Comment below username -->
    <TextView
        android:id="@+id/review_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/review_rating"
        app:layout_constraintStart_toEndOf="@id/review_book_cover"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"/>

    <!-- Edit/Delete buttons at bottom-right -->
    <ImageButton
        android:id="@+id/editReviewButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/profile_edit_review_button"
        android:src="@android:drawable/ic_menu_edit"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@id/deleteReviewButton"
        app:layout_constraintTop_toBottomOf="@id/review_comment"
        android:layout_marginTop="8dp"/>

    <ImageButton
        android:id="@+id/deleteReviewButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/profile_delete_review_button"
        android:src="@android:drawable/ic_menu_delete"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_comment"
        android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>